--- a/index.html
+++ b/index.html
@@ -118,6 +118,6 @@
         <p>&copy; 2026 Matrix Terminal System. All security protocols active.</p>
     </footer>
 
-    <script src="./js/matrix_effects.js"></script>
+    <script src="./js/matrix_effect.js"></script>
 </body>
 </html>
