--- a/satisfaction_form.html
+++ b/satisfaction_form.html
@@ -118,7 +118,7 @@
         <p>&copy; 2026 Matrix Terminal System. Secure connection established.</p>
     </footer>
 
-    <script src="./js/matrix_effects.js"></script>
+    <script src="./js/matrix_effect.js"></script>
 
     <script>
         // Función para simular procesamiento de datos estilo terminal
