--- a/sql_project.html
+++ b/sql_project.html
@@ -131,6 +131,6 @@
         <p>&copy; 2026 Matrix Terminal System. Database Transactions: Committed.</p>
     </footer>
 
-    <script src="./js/matrix_effects.js"></script>
+    <script src="./js/matrix_effect.js"></script>
 </body>
 </html>
