--- a/powershell_project.html
+++ b/powershell_project.html
@@ -117,6 +117,6 @@
         <p>&copy; 2026 Matrix Terminal System. PowerShell Core 7.4 active.</p>
     </footer>
 
-    <script src="./js/matrix_effects.js"></script>
+    <script src="./js/matrix_effect.js"></script>
 </body>
 </html>
