--- a/python_project.html
+++ b/python_project.html
@@ -109,6 +109,6 @@
         <p>&copy; 2026 Matrix Terminal System. All Python modules loaded.</p>
     </footer>
 
-    <script src="./js/matrix_effects.js"></script>
+    <script src="./js/matrix_effect.js"></script>
 </body>
 </html>
